Fix prompt at start, attempt to fix colors